--- a/src/components/list_task/ListTask.css
+++ b/src/components/list_task/ListTask.css
@@ -9,6 +9,9 @@
 .task-item {
     background-color: #F6F6F6;
     border: 1px solid #FFD600;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
     border-radius: 5px;
     margin-bottom: 10px;
     padding: 10px;
@@ -16,11 +19,35 @@
 }
 
 .task-item h3 {
-    margin: 0 0 5px;
+    margin: 2px;
 }
 
 .task-item p {
-    margin: 0;
+    margin: 5px;
+}
+
+.task-header {
+    display: flex;
+    align-items: center;
+}
+
+.difficulty-circle {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    margin-right: 5px;
+}
+
+.difficulty-circle.easy {
+    background-color: #ffebb5;
+}
+
+.difficulty-circle.medium {
+    background-color: #ffdc7a;
+}
+
+.difficulty-circle.hard {
+    background-color: #ffc012;
 }
 
 .task-link {
