--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,8 +1,3 @@
-a {
-    text-decoration: none;
-    color: black;
-}
-
 .header {
     display: flex;
     align-items: center;
@@ -10,35 +5,33 @@ a {
     background-color: white;
     font-family: "RopaSans";
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.08), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  
-}
-
-.nerd-icon {
-    width: 90px;
-    height: auto;
-    margin-right: 115px; 
-    margin-left: 50px;
+    height: 80px;
+    width: 100%;
 }
 
 .tabs {
-    list-style-type: none;
-    padding: 0;
     display: flex;
+    align-items: center;
+    height: 80px;
+    width: 100%;
 }
 
 .tab {
-    margin-left: 115px;
+    text-align: center;
+    height: 20px;
+    width: 80px;
+    line-height: 20px;
     cursor: pointer;
-    padding: 12px;
+    padding: 12px 12px 12px 12px;
+    margin: 20px;
+    border-radius: 35px;
 }
 
-.tab:hover, .tab:active {
-    color: black;
-    text-decoration: none;
+.tab:hover {
     background-color: #FFCC00;
-    border-radius: 30px;
+    border-radius: 35px;
+    border-bottom: none;
 }
-
 
 .separator {
     width: 1px; 
@@ -56,26 +49,10 @@ a {
     padding: 12px;
 }
 
-.login:hover {
-    color: black;
-    text-decoration: none;
-    background-color: #FFCC00;
-    border-radius: 30px;
-}
-
-.login:active {
-    color: black;
-    text-decoration: none;
-    background-color: #E6B800;
-    border-radius: 30px;
-}
-
 .signup {
-    cursor: pointer;
-    padding: 12px;
     background-color: #FFCC00;
     border-radius: 30px;
-    margin-right: 10;
+    margin-right: 10px;
 }
 
 .signup:hover {
@@ -86,4 +63,12 @@ a {
 .signup:active {
     background-color: #e6e6e6;
     outline: 1px solid black;
+}
+
+.ant-menu-item-selected::after, .ant-menu-item:hover::after{
+    border-bottom: none !important;
+}
+
+.ant-menu-item:hover{
+    border-bottom: none !important;
 }
