--- a/src/components/battle_screen/BattleScreen.css
+++ b/src/components/battle_screen/BattleScreen.css
@@ -54,7 +54,7 @@
 .action-button {
   margin-bottom: 10px; /* Отступ между кнопками */
   padding: 10px; /* Внутренний отступ */
-  background-color: #FFCC00; /* Цвет фона кнопок */
+  background-color: #ffcc00; /* Цвет фона кнопок */
   color: black; /* Цвет текста */
   border: none; /* Без рамки */
   border-radius: 4px; /* Закругленные углы */
@@ -62,7 +62,7 @@
 }
 
 .action-button:hover {
-  background-color: #FFCC00; /* Темный цвет при наведении */
+  background-color: #ffcc00; /* Темный цвет при наведении */
 }
 
 .cost-numbers {
@@ -106,11 +106,12 @@
 
 .button-group button {
   padding: 10px; /* Внутренний отступ */
-  background-color: #28a745; /* Цвет фона кнопок */
-  color: white; /* Цвет текста */
+  background-color: #ffcc00; /* Цвет фона кнопок */
+  color: black; /* Цвет текста */
   border: none; /* Без рамки */
   border-radius: 4px; /* Закругленные углы */
   cursor: pointer; /* Курсор в виде указателя */
+  margin-bottom: 10px; /* Отступ между кнопками */
 }
 
 .button-group button:hover {
@@ -119,7 +120,7 @@
 
 .points-button {
   padding: 10px; /* Внутренний отступ */
-  background-color: #FFCC00; /* Цвет фона кнопок */
+  background-color: #ffcc00; /* Цвет фона кнопок */
   color: black; /* Цвет текста */
   border: none; /* Без рамки */
   border-radius: 4px; /* Закругленные углы */
@@ -128,5 +129,5 @@
 }
 
 .points-button:hover {
-  background-color: #FFCC00; /* Темный цвет при наведении */
+  background-color: #ffcc00; /* Темный цвет при наведении */
 }
