--- a/src/pages/problem_list_page/ProblemsListPage.css
+++ b/src/pages/problem_list_page/ProblemsListPage.css
@@ -5,6 +5,7 @@
     padding-right: 10px;
     padding-left: 10px;
     padding-top: 15px;
+    height: 100%;
 }
 
 .filters {
@@ -12,8 +13,8 @@
     margin-right: 15px;
     margin-top: 10px;
     margin-left: 5%;
-    background-color: #F6F6F6;
-    border: 1px solid #FFD600;
+    background-color: white;
+    border: 1px solid #ddd;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -25,6 +26,10 @@
 .task-list-container {
     margin-left: 5%;
     width: 60%;
+    height: calc(100% - 30px);
+    overflow-y: auto;
+    padding: 15px;
+    box-sizing: border-box;
 }
 
 .filters input,
@@ -49,7 +54,7 @@
 .name-search {
     width: 70%;
     height: 20px;
-    background-color: #F6F6F6;
+    background-color: white;
     border: 2px solid #FFD600;
     border-radius: 10px;
     color: black;
