--- a/src/pages/problem_page/ProblemPage.css
+++ b/src/pages/problem_page/ProblemPage.css
@@ -18,19 +18,7 @@
     border: 2px solid black;
     border-top: none;
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-
-.test-cases {
-    border: 2px none black;
-    border-right-style: solid;
-    padding-right: 30px;
-}
-
-.test-results {
-    text-align: center;
-    padding-right: 30px;
+    padding-left: 20px;
 }
 
 .additional-info {
@@ -47,21 +35,10 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    padding: 20px;
 }
 
 .input-test {
-    width: 50%;
-}
-
-.test-result-container {
-    width: 50%;
-    margin-left: 20px;
-}
-
-.input-test textarea {
     width: 100%;
-    resize: none;
 }
 
 .language {
