--- a/src/pages/problem_page/ProblemPage.css
+++ b/src/pages/problem_page/ProblemPage.css
@@ -55,3 +55,33 @@ select {
     font-size: 16px;
     appearance: none;
 }
+
+.like-dislike-buttons {
+}
+
+.like-dislike-buttons button {
+    border: none;
+    border-radius: 10%;
+    margin-left: 4px;
+    margin-right: 4px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.like-dislike-buttons button:focus {
+    outline: none;
+}
+
+.like-dislike-buttons button:hover {
+    background-color: #e0e0e0;
+}
+
+.like-dislike-buttons button.selected {
+    background-color: lightgreen;
+}
+
+.like-dislike-buttons button.dislike-selected {
+    background-color: lightcoral;
+}
