--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.only-for-desktop-alert {
+  .only-for-desktop-alert-image {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .only-for-desktop-alert-text {
+    position: absolute;
+    top: 65%;
+    left: 56%;
+    transform: translate(-65%, -56%);
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-device-width: 600px) {
+  .App {
+    visibility: hidden;
+    display: none;
   }
-  to {
-    transform: rotate(360deg);
+  .only-for-desktop-alert {
+    visibility: visible;
+  }
+}
+
+@media screen and (min-device-width: 600px) {
+  .only-for-desktop-alert {
+    visibility: hidden;
+    display: none;
+  }
+  .App {
+    visibility: visible;
   }
 }
