--- a/src/pages/problem_page/ProblemPage.css
+++ b/src/pages/problem_page/ProblemPage.css
@@ -14,6 +14,14 @@
     padding-left: 20px;
 }
 
+.test-case-visualizing {
+    border: 2px solid black;
+    border-top: none;
+    align-items: center;
+    padding-left: 20px;
+    font-family: 'RopaSans';
+}
+
 .name {
     display: flex;
     flex-direction: row;
