--- a/src/pages/problem_page/ProblemPage.css
+++ b/src/pages/problem_page/ProblemPage.css
@@ -83,6 +83,7 @@ select {
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
+    margin-top: 20px;
     transition: background-color 0.3s ease;
 }
 
